--- a/src/components/SimilarProductItem/index.css
+++ b/src/components/SimilarProductItem/index.css
@@ -1,5 +1,68 @@
 .similar-products-container {
   display: flex;
+  margin: 0px;
+  padding: 0px;
+}
+
+.each-similar-products {
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  margin: 0px;
+}
+
+.similar-product-image {
+  width: 100%;
+  height: 250px;
+  border-radius: 10px;
+  margin: 0px 20px 0px 0px;
+}
+
+.title {
+  font-size: 12px;
+  color: #171f46;
+  font-weight: bold;
+}
+
+.brand {
+  font-size: 12px;
+  color: #475569;
+  font-weight: bold;
+}
+
+.each-similar-products div {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+}
+
+.price {
+  font-size: 12px;
+  color: #171f46;
+  font-weight: bold;
+}
+
+.each-similar-products div div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #3b82f6;
+  border-radius: 5px;
+  width: 50px;
+  height: 25px;
+  display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.rating {
+  font-size: 12px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.star-rating {
+  border: none;
+  color: #fff;
 }
